--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,3 +11,86 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.layout {
+  width: 85%;
+  margin: 0 auto;
+}
+
+/* HEADER */
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  height: 132px;
+  border-bottom: 3px solid black;
+  margin-bottom: 35px;
+}
+
+.header .logo {
+  display: flex;
+  flex-grow:  2;
+}
+
+.header .logo span {
+  display: block;
+  font-size: 90px;
+  font-weight: bolder;
+  margin-top: -10px;
+}
+
+.header .logo h3 {
+  display: block;
+  flex-basis: 40px;
+  margin-left: 2px;
+  font-weight: 500;
+}
+
+.header nav {
+  flex-grow:  1;
+}
+
+.header nav ul {
+  display:  flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  height: 132px;
+}
+
+.header li {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 17px;
+  margin: 0 15px;
+}
+
+.header li a {
+  color: #000;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.header .active,
+.header a:hover {
+  color: #FA4529;
+  transition-duration: 0.5s;
+}
+
+.content {
+  min-height: 400px;
+
+}
+
+.footer {
+  min-height: 150px;
+  line-height: 100px;
+  text-align: center;
+  font-size: 14px;
+  margin-top:35px;
+  padding-top: 45px;
+  border-top: 3px solid black;
+  background-color: #F5F5F5;
+  color: #444;
+}
