--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  user-select: none;
 }
 
 code {
@@ -84,13 +85,164 @@ code {
 }
 
 .footer {
-  min-height: 150px;
-  line-height: 100px;
+  min-height: 40px;
+  line-height: 7px;
   text-align: center;
   font-size: 14px;
-  margin-top:35px;
+  margin-top: 80px;
   padding-top: 45px;
   border-top: 3px solid black;
   background-color: #F5F5F5;
   color: #444;
+}
+
+.home h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 60px; 
+  margin-bottom: 0px;
+  margin-top: 80px;
+}
+
+.home strong {
+  color: #FA4529;
+}
+
+.home .title h2 {
+  color: rgb(112, 108, 108);
+  font-weight: lighter;
+}
+
+.home .title a {
+  font-size: 16px;
+  margin-left: 5px;
+  padding: 7px;
+  border-radius: 5px;
+  color: #FFF;
+  background: #FA4529;
+  text-decoration: none;
+  transition: all 400ms;
+}
+
+.home .title a:hover,
+input[type="submit"]:hover,
+button:hover {
+  background: #17fd17;
+}
+
+.page .heading,
+.home .heading {
+  font-style: italic;
+  font-size: 40px;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.page .heading {
+  font-size: 55px;
+  font-weight: bold;
+}
+
+.home p {
+  color: #7e7c7c;
+}
+
+input[type="text"],
+textarea {
+  display: block;
+  padding: 15px;
+  width: 250px;
+  margin-top: 20px;
+}
+
+input[type="submit"],
+button {
+  font-size: 15px;
+  padding: 15px;
+  margin-top: 15px;
+  border: 0px;
+  border-radius: 5px;
+  color: #FFF;
+  background: #FA4529;
+  text-decoration: none;
+  transition: all 400ms;
+  cursor: pointer;
+}
+
+.works {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-item {
+  flex-basis: 30%;
+  flex-grow: 1;
+  margin: 30px;
+}
+
+.work-item .mask {
+  width: 100%;
+  height: 350px; 
+  overflow: hidden;
+  border: 1px solid #ccc;
+  box-shadow: 0px 5px 15px grey;
+}
+
+.work-item img {
+  width: 100%;
+  transition: all 500ms;
+}
+
+.work-item .mask:hover img {
+  width: 150%;
+  margin-right: 30%;
+}
+
+.work-item span {
+  display: block;
+  color: grey;
+  margin-top: 35px;
+}
+
+.work-item h2 {
+  display: block;
+  font-size: 20px;
+  color: black;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.work-item a {
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.work-item a:hover {
+  color: #FA4529;
+}
+
+.work-item h3 {
+  display: block;
+  padding-top: 15px;
+  margin-top: 0px;
+  color: #444;
+  border-top: 1px solid #ddd;
+}
+
+.page-work {
+  position: relative;
+}
+
+.page-work .mask {
+  height: 300px;
+  overflow: hidden;
+  box-shadow: 5px 12px 10px #ccc;
+  transition: all 300ms;
+}
+
+.page-work .mask:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 20px #ccc;
 }
